--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body {
 <body>
 <div class="container">
   <div class="header">
-    <h1>🌦Estación Meteorológica Quinzona🌦</h1>
-    <h2>(Isla Tenglo)</h2>
+    <h1>Estación Meteorológica Quinzona</h1>
+    <h2>(🌦Isla Tenglo🌦)</h2>
   </div>
 
 <!-- Rosa de vientos moderna -->
